cluster-ops/kubernetes/common/Gateway/single-domain-certificate-template.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: OBJECT_BASE_NAME-gateway
  namespace: istio-system
  labels:
    app: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      protocol: HTTPS
      name: https-default
    tls:
      mode: SIMPLE
      serverCertificate: "sds"
      privateKey: "sds"
      credentialName: "OBJECT_BASE_NAME-tls"
    hosts:
    - "DOMAIN_NAME"
